--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 h1 {
     font-size: 2.5rem;
     text-align: center;
-    background: linear-gradient(to right, #ff8c00, #ffd700);
+    background: linear-gradient(to right, #0f0e0d, #111110);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -83,8 +83,8 @@ h1 {
 }
 
 @keyframes glowText {
-    from { text-shadow: 0 0 10px #ff8c00; }
-    to { text-shadow: 0 0 20px #ffd700; }
+    from { text-shadow: 0 0 10px #f7f4f1; }
+    to { text-shadow: 0 0 20px #ebeae5; }
 }
 
 .user-container {
